--- a/changes
+++ b/changes
@@ -12,3 +12,4 @@ sources are no longer downloaded in batch
 remove: --cleanmenu
 dont treat every package as possibly devel
 --needed can be passed twice to skip up to date packages early
+remove -Y/--yay, stuff like --gendb still work even though they belonged to -Y
