--- a/man/paru.8
+++ b/man/paru.8
@@ -249,6 +249,10 @@ Print search results from top to bottom.
 Print search results from bottom to top.
 
 .TP
+.B \-\-nocheck
+Don't resolve checkdepends or run the check function.
+
+.TP
 .B \-\-devel
 During sysupgrade also check AUR development packages for updates. Currently
 only Git packages are supported.
