--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -50,6 +50,10 @@ Loop sudo calls in the background to prevent sudo from timing out during long
 builds.
 
 .TP
+.B NoCheck
+Don't resolve checkdepends or run the check function.
+
+.TP
 .B Devel
 During sysupgrade also check AUR development packages for updates. Currently
 only Git packages are supported.
