remove the ability to pass an answer to --upgrademenu
This made more sense for answerdiff and others. With upgrades you may as
well just use ignore.

--- a/man/paru.8
+++ b/man/paru.8
@@ -216,7 +216,7 @@ Sort AUR results by a specific field during search.
 Search for AUR packages by querying the specified field.
 
 .TP
-.B \-\-upgrademenu [Repo|^Repo|None|...]
+.B \-\-upgrademenu
 Show a detailed list of updates in a similar format to VerbosePkgLists.
 Upgrades can also be skipped using numbers, number ranges or repo names.
 Additionally ^ can be used to invert the selection.
