--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -121,7 +121,7 @@ If all is selected then all packages are rebuilt, not only targets.
 Remove makedepends after installing packages. Defaults to yes.
 
 .TP
-.B UpgradeMenu [= Repo|^Repo|1-3|...]
+.B UpgradeMenu
 Show a detailed list of updates in a similar format to VerbosePkgLists.
 Upgrades can also be skipped using numbers, number ranges or repo names.
 Additionally ^ can be used to invert the selection.
