Typo in paru.conf(5)

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -164,7 +164,7 @@ AUR query will cause an error. This should only make a noticeable difference
 with very large requests (>500) packages.
 
 .TP
-.B PacmanConof = path/to/pacman.conf
+.B PacmanConf = path/to/pacman.conf
 The pacman config file to use.
 
 .SH BIN
