--- a/man/paru.8
+++ b/man/paru.8
@@ -269,6 +269,12 @@ a list of packages into paru (see \fBexamples\fR).
 Do not check for development packages updates during sysupgrade.
 
 .TP
+.B \-\-develsuffixes
+Suffixes that paru will use to decide if a package is a devel package. 
+Used when determining if a pkgver bump is used when the --needed option is
+set.
+
+.TP
 .B \-\-cleanafter
 Remove untracked files after installation.
 
