--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -54,6 +54,10 @@ builds.
 Don't resolve checkdepends or run the check function.
 
 .TP
+.B \-\-InstallDebug
+Also install debug packages when a package provides them.
+
+.TP
 .B Devel
 During sysupgrade also check AUR development packages for updates. Currently
 only Git packages are supported.
