Fix a spelling mistake on line 82 of the man page
(forein → foreign)

--- a/man/paru.8
+++ b/man/paru.8
@@ -79,7 +79,7 @@ Updates will then be detected on the next commit.
 Remove unneeded dependencies.
 
 Make and check dependencies are considered for
-forein packages. Pass this twice to ignore these.
+foreign packages. Pass this twice to ignore these.
 
 .SH SHOW OPTIONS (APPLY TO \-P AND \-\-SHOW)
 .TP
