Capitalize PKGBUILD in paru.8

--- a/man/paru.8
+++ b/man/paru.8
@@ -98,7 +98,7 @@ available news.
 
 .TP
 .B \-p, \-\-print
-Prints the pkgbuild to the terminal instead of downloading it.
+Prints the PKGBUILD to the terminal instead of downloading it.
 
 .SH NEW OPTIONS
 .TP
