--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -1,39 +1,41 @@
 '\ t
-.TH "PARU.CONF" "5" "2019\-10\-21" "paru v0.0.1" "Paru  Manual"
+.TH "PARU.CONF" "5" "2020\-10\-28" "paru v1.0.0" "Paru Manual"
 .nh
 .ad l
 .SH NAME
-PARU \- AUR Helper
+paru.conf \- paru configuration file
 
 .SH SYNOPSIS
-/etc/paru.conf
-.sp
-~/.config/paru/paru.conf
+$XDG_CONFIG_HOME/paru/paru.conf, $HOME/.config/paru/paru.conf, /etc/paru.conf
 
 .SH DESCRIPTION
-Paru's config file. Based on the format used by \fBpacman.conf (5)\fR.
+Paru's config file. Based on the format used by 
+.BR pacman.conf (5)
 
-Paru will attempt to read the config file from the user's home directory. If that does not exist
-paru will instead attempt to read the file from the system config directory.
+Paru will attempt to read the config file from $XDG_CONFIG_HOME/paru/paru.conf. If
+$XDG_CONFIG_HOME is unset, it will attempt to read the file from 
+$HOME/.config/paru/paru.conf. If neither of those exist, it will read from the
+defaults at /etc/paru.conf.
 
-Aditionally the \fBInclude\fB directive can be used to copy paste files into the config. This could be used
-to extend the system config by including it in your user's config and then defining options.
+Aditionally, the \fBInclude\fB directive can be used to copy paste files into
+the config. This could be used to extend the system config by including it in
+your user's config and then defining options.
 
 .SH OPTIONS
-
 Options belonging to the [options] section.
 
 .TP
 .B TopDown
-Print search results from top to bottom.
+Print search results from top to bottom. Repo results will be printed
+first. This is the default.
 
 .TP
 .B BottomUp
-Print search results from bottom to top.
+Print search results from bottom to top. AUR results will be printed first.
 
 .TP
 .B AurOnly
-Assume all targets are from the AUR. Additionally Actions such as
+Assume all targets are from the AUR. Additionally, actions such as
 sysupgrade will only act on AUR packages.
 
 Note that dependency resolving will still act normally and include repository
@@ -41,13 +43,13 @@ packages.
 
 .TP
 .B RepoOnly
-Assume all targets are from the repositories. Additionally Actions such as
+Assume all targets are from the repositories. Additionally, actions such as
 sysupgrade will only act on repository packages.
 
 .TP
 .B SudoLoop
-Loop sudo calls in the background to prevent sudo from timing out during long
-builds.
+Periodically call sudo in the background during builds to prevent it from
+timing out.
 
 .TP
 .B NoCheck
@@ -89,49 +91,48 @@ PKGBUILD.
 .B CombinedUpgrade
 During sysupgrade, paru will first perform a refresh, then show
 its combined menu of repo and AUR packages that will be upgraded. Then after
-reviewing the pkgbuilds, the repo and AUR upgrade will start with no need
+reviewing the PKGBUILDs, the repo and AUR upgrade will start with no need
 for manual intervention.
 
-If paru exits for any reason After the refresh without upgrading. It is then
+If paru exits for any reason after the refresh without upgrading, it will be
 the user's responsibility to either resolve the reason paru exited or run
 a sysupgrade through pacman directly.
 
 .TP
 .B BatchInstall
-When building and installing AUR packages instead of installing each package
+When building and installing AUR packages; instead of installing each package
 after building, queue each package for install. Then once either all packages
 are built or a package in the build queue is needed as a dependency to build
 another package, install all the packages in the install queue.
 
 .TP
 .B UseAsk
-Use pacman's --ask flag to automatically confirm package conflicts. paru lists
+Use pacman's --ask flag to automatically confirm package conflicts. Paru lists
 conflicts ahead of time. It is possible that paru does not detect
 a conflict, causing a package to be removed without the user's confirmation.
 However, this is very unlikely.
 
 .TP
-.B Redownload [= All]
-Always download pkgbuilds of targets even when a copy is available in cache.
-If all is used then this applies to all packages, not only targets.
+.B Redownload = no | all
+Always download PKGBUILDs of targets even when a copy is available in cache. If
+set to all then this applies to all packages, not only targets. Defaults to no.
 
 .TP
-.B Rebuild [= All]
-Always build target packages even when a copy is available in cache.
-If all is selected then all packages are rebuilt, not only targets.
+.B Rebuild = no | all
+Always build target packages even when a copy is available in cache. If all is
+selected then all packages are rebuilt, not only targets. Defaults to no.
 
 .TP
-.B RemoveMake [= Ask]
-Remove makedepends after installing packages. Defaults to yes.
+.B RemoveMake = yes | no | ask
+Remove makedepends after installing packages. Defaults to no.
 
 .TP
 .B UpgradeMenu
-Show a detailed list of updates in a similar format to VerbosePkgLists.
-Upgrades can also be skipped using numbers, number ranges or repo names.
-Additionally ^ can be used to invert the selection.
-
-Additionally an argument can be passed to this flag and the menu will use
-this input instead of reafing from stdin.
+Show a detailed list of updates in a similar format to pacman's VerbosePkgLists
+option. (See 
+.BR pacman.conf(5)).
+Upgrades can be skipped using numbers, number ranges, or repo
+names. Additionally, ^ can be used to invert the selection.
 
 \fBWarning\fR: It is not recommended to skip updates from the repositories as
 this can lead to partial upgrades. This feature is intended to easily skip AUR
@@ -145,27 +146,31 @@ to use https://aur.tuna.tsinghua.edu.cn/.
 
 .TP
 .B BuildDir = /path/to/dir
-Directory to use for Building AUR Packages. This directory is also used as
+Directory to use for building AUR Packages. This directory is also used as
 the AUR cache when deciding if paru should skip builds.
 
 .TP
-.B SortBy = Votes|Popularity|Id|Baseid|Name|Base|Submitted|Modified
+.B SortBy = votes|popularity|name|base|submitted|modified|id|baseid
+Defaults to votes. Sort AUR results according to the options in "Sort by"
+visible here: https://aur.archlinux.org/packages/
 
 .TP
-.B SearchBy = name|name-desc|maintainer|depends|checkdepends|makedepends|optdepends>
+.B SearchBy = name|name-desc|maintainer|depends|checkdepends|makedepends|optdepends
+Defaults to name-desc. Search AUR packages according to the options in 
+"Search by" visible here: https://aur.archlinux.org/packages/    
 
 .TP
-.B CompletionInterval = N
+.B CompletionInterval = Number
 Time in days to refresh the completion cache. Setting this to 0 will cause
 the cache to be refreshed every time, while setting this to -1 will cause the
-cache to never be refreshed.
+cache to never be refreshed. Defaults to 7.
 
 .TP
 .B RequestSplit = Number
 The maximum amount of packages to request per AUR query. The higher the
 number the faster AUR requests will be. Requesting too many packages in one
 AUR query will cause an error. This should only make a noticeable difference
-with very large requests (>500) packages.
+with very large requests (>500) packages. Defaults to 150.
 
 .TP
 .B PacmanConf = path/to/pacman.conf
@@ -178,11 +183,10 @@ Used when determining if a pkgver bump is used when the --needed option is
 set.
 
 .TP
-.B NoWarn  = Packages...
+.B NoWarn = Packages...
 Don't warn when these packages are not in the aur, out of date, or orphaned.
 
 .SH BIN
-
 Options belonging to the [bin] section.
 
 .TP
@@ -208,13 +212,13 @@ The command to use for \fBasp\fR calls. This can be a command in
 .TP
 .B Sudo = path/to/sudo
 The command to use for \fBsudo\fR calls. This can be a command in
-\fBPATH\fR or an absolute path to the file.
-The sudoloop is not guaranteed to work with a custom \fBsudo\fR command.
+\fBPATH\fR or an absolute path to the file. The SudoLoop option is not
+guaranteed to work with a custom \fBsudo\fR command.
 
 .TP
 .B FileManager = path/to/fm
 This enables fm review mode, where pkgbuild review is done using the file
-manager specified by command.
+manager specified here.
 
 .TP
 .B MFlags = Flags...
@@ -242,6 +246,6 @@ passed to sudo.
 
 .TP
 .B FileManagerFlags = Flags...
-Passes arguments to file manager. These flags get passed to every instance where
-file manager is called by paru. Arguments are split on whitespace before being
-passed to file manager.
+Passes arguments to the file manager. These flags get passed to every instance
+where file manager is called by paru. Arguments are split on whitespace before
+being passed to file manager.
