Fix the rebuild option

--- a/man/paru.8
+++ b/man/paru.8
@@ -364,7 +364,7 @@ another package, install all the packages in the install queue.
 Always install AUR packages immediately after building them.
 
 .TP
-.B \-\-rebuild <yes|no|all>
+.B \-\-rebuild [yes|no|all]
 Always build target packages even when a copy is available in cache. If all is
 selected then all packages are rebuilt, not only targets. Defaults to no.
 
