Order synopsis for priority

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -6,7 +6,7 @@
 paru.conf \- paru configuration file
 
 .SH SYNOPSIS
-/etc/paru.conf, $PARU_CONF, $XDG_CONFIG_HOME/paru/paru.conf, $HOME/.config/paru/paru.conf
+$PARU_CONF, $XDG_CONFIG_HOME/paru/paru.conf, $HOME/.config/paru/paru.conf, /etc/paru.conf
 
 .SH DESCRIPTION
 Paru's config file. Based on the format used by 
