Add AUR comments support
paru -Gc paru

--- a/man/paru.8
+++ b/man/paru.8
@@ -98,6 +98,10 @@ available news.
 .B \-p, \-\-print
 Prints the PKGBUILD to the terminal instead of downloading it.
 
+.TP
+.B \-c, \-\-comments
+Print the AUR comments from the PKGBUILD's AUR page.
+
 .SH NEW OPTIONS
 .TP
 .B \-\-repo
