--- a/man/paru.8
+++ b/man/paru.8
@@ -321,6 +321,11 @@ Do not prompt to import unknown PGP keys. This is likely to cause a build
 failure unless using options such as \fB\-\-skippgpcheck\fR or a customized
 gpg config\%.
 
+
+.TP
+.B \-\-newsonupgrade
+Print new news during sysupgrade.
+
 .TP
 .B \-\-useask
 Use pacman's --ask flag to automatically confirm package conflicts. Paru lists
