--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -107,6 +107,10 @@ are built or a package in the build queue is needed as a dependency to build
 another package, install all the packages in the install queue.
 
 .TP
+.B NewsOnUpgrade
+Print new news during sysupgrade.
+
+.TP
 .B UseAsk
 Use pacman's --ask flag to automatically confirm package conflicts. Paru lists
 conflicts ahead of time. It is possible that paru does not detect
