--- a/man/paru.8
+++ b/man/paru.8
@@ -1,5 +1,5 @@
 '\ t
-.TH "PARU" "8" "2020\-10\-28" "paru v1.0.0" "Paru Manual"
+.TH "PARU" "8" "2020\-11\-2" "paru v1.0.2 "Paru Manual"
 .nh
 .ad l
 .SH NAME
