manpages: Remove dashes from InstallDebug

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -57,7 +57,7 @@ long builds.
 Don't resolve checkdepends or run the check function.
 
 .TP
-.B \-\-InstallDebug
+.B InstallDebug
 Also install debug packages when a package provides them.
 
 .TP
