--- a/man/paru.8
+++ b/man/paru.8
@@ -184,6 +184,18 @@ passed to makepkg. Multiple arguments may be passed by supplying a space
 separated list that is quoted by the shell.
 
 .TP
+.B \-\-bat <command>
+The command to use for \fBbat\fR calls. This can be a command in
+\fBPATH\fR or an absolute path to the file.
+
+.TP
+.B \-\-batflags <flags>
+Passes arguments to bat. These flags get passed to every instance where
+bat is called by paru. Arguments are split on whitespace before being
+passed to bat. Multiple arguments may be passed by supplying a space
+separated list that is quoted by the shell.
+
+.TP
 .B \-\-sudo <command>
 The command to use for \fBsudo\fR calls. This can be a command in
 \fBPATH\fR or an absolute path to the file. The --sudoloop option is not
